...
      }));
    }
  };

  /**
   * Combines the folders into a list of items for the modal.
   * It includes an "Add Folder" button at the end of the list.
   */
  const folderItems = [
    ...mapToFolderShape(
      [...folders].sort((a, b) => (b.folderID ?? 0) - (a.folderID ?? 0)),
    ),
    {
...
                      onClose();
                    }}
                    colorScheme={colorScheme}
                    selectedFolder={selectedFolder}
                  >
                    <ThemedText colorVariant="white" fontWeight="bold">
                      Move
                    </ThemedText>
                  </NextButton>
                ) : (
                  <NextButton
                    onPress={() => {
                      setFolderModalVisible(true);
...
