...
                    }
                  },
                }
              : null,
            noteData && !noteData.archived
              ? {
                  label: noteData?.pinned ? "Unpin Widget" : "Pin Widget",
                  icon: "push-pin",
                  disabled:
                    noteData?.pinned === false &&
                    noteData?.pin_count != null &&
                    noteData.pin_count >= 4,
                  onPress: async () => {
...
                  onPress: () => {
                    goToEditPage();
                  },
                }
              : null,
            {
              label: noteData?.archived ? "Restore" : "Archive",
              icon: noteData?.archived ? "restore" : "archive",
              onPress: async () => {
                if (noteData) {
                  const archiveResult =
                    await generalPageService.togglePageArchive(
                      Number(pageId),
...
              },
            },
            noteData && !noteData.archived
              ? {
                  label:
                    noteData && noteData.parentID === null
                      ? "Move to Folder"
                      : "Move to another Folder",
                  icon: "folder",
                  onPress: async () => {
                    setShowFolderSelectionModal(true);
                  },
                }
...
