...
                fontWeight="bold"
                accessible={true}
                accessibilityRole="header"
                accessibilityLiveRegion="polite"
                optionalRef={headerRef}
              >
                Home
              </ThemedText>

              {widgets.length === 0 &&
              pinnedWidgets.length === 0 &&
              !completedWithError ? (
                <EmptyHome
                  text="Add your first note/collection"
                  buttonLabel="Start"
                  useModal={false}
                  onButtonPress={() => setModalVisible(true)}
                />
              ) : (
                <>
                  <ScrollView
...
          {
            label: "Move to Folder",
            icon: "folder",
            onPress: () => setShowFolderSelectionModal(true),
          },
          {
            label: "Delete",
            icon: "delete",
            onPress: () => {
              setShowModal(false); // close the QuickActionModal

              if (Platform.OS === "ios") {
                setTimeout(() => {
...
