...
                  }
                />
              </Card>
              <LabelWrapper>
                <ThemedText fontSize="regular" fontWeight="regular">
                  {option === "light"
                    ? "Light"
                    : option === "dark"
                      ? "Dark"
                      : "System Default"}
                </ThemedText>
                <RadioButtonOuter isSelected={selected === option}>
                  {selected === option && <RadioButtonInner />}
                </RadioButtonOuter>
              </LabelWrapper>
...
