export enum ScreenType {
  Archive = "archive",
  Home = "home",
}
