...
        }, 100); // Delay is important to let layout stabilize
      }
    }
  }, [options.length]);

  /**
   * Function to handle the click of the "Add" button, adding a new selectable item.
   * Ensures that the number of options does not exceed 20.
   */
  const handleAddButtonClick = () => {
    if (options.length < 20) {
      onOptionsChange([...options, ""]);
    }
...
