...
          >
            <View style={{ marginBottom: 20 }}>
              <Card>
                <View style={{ alignItems: "center", gap: 20 }}>
                  <View style={{ alignItems: "center" }}>
                    <ThemedText fontSize="l" fontWeight="bold">
                      Edit Widget
                    </ThemedText>
                    <ThemedText
                      fontSize="s"
                      fontWeight="light"
                      colorVariant={
                        colorScheme === "light" ? "grey" : "lightGrey"
...
          style={{
            paddingBottom: Platform.OS === "android" ? 8 : 24,
          }}
        >
          <BottomButtons
            titleLeftButton="Discard"
            titleRightButton="Save"
            onDiscard={() => {
              router.back();
            }}
            onNext={updateWidget}
            variant="back"
            hasProgressIndicator={false}
...
