...
      <View
        style={{
          paddingTop: Platform.OS === "android" ? StatusBar.currentHeight : 0,
        }}
      >
        <CustomStyledHeader
          title="Tags"
          backBehavior="goBackWithParams"
          param={JSON.stringify(tags.length > 0 ? tags[tags.length - 1] : null)}
          headerRef={headerRef}
        />
      </View>

...
            >
              <Button
                onPress={() => setModalVisible(true)}
                accessibilityLabel="Add Tag Button"
                accessibilityHint="Opens the input modal for adding a new tag"
              >
                Add
              </Button>
            </LinearGradient>
          </View>
        )}
      </View>
      <BottomInputModal
...
