...
              </Card>
            </View>
            <View style={{ flex: 1, alignItems: "center", gap: 20 }}>
              <View style={{ width: "100%", gap: 20 }}>
                <Card>
                  <TitleCard
                    placeholder="Add a title"
                    value={title}
                    onChangeText={(text) => {
                      setTitle(text);
                      if (text.trim().length > 0) setTitleError(null);
                    }}
                  />
...
          style={{
            paddingBottom: Platform.OS === "android" ? 8 : 24,
          }}
        >
          <BottomButtons
            titleLeftButton="Discard"
            titleRightButton="Create"
            onDiscard={() => {
              router.back();
            }}
            onNext={createNote}
            variant="back"
            hasProgressIndicator={false}
...
