...
        {tags.length !== 0 && (
          <TagContainer onPress={onPress}>
            <TagButton
              themeMode={colorScheme}
              accessible={true}
              accessibilityRole="button"
              accessibilityLabel="Edit tags"
              accessibilityHint="Opens the Tag Management page"
            >
              <MaterialIcons
                name="edit"
                size={16}
                color={colorScheme === "dark" ? Colors.white : Colors.black}
...
