...
                  </ThemedText>
                )}
              </HorizontalTitleRow>
              <Textfield
                showTitle={false}
                textfieldIcon="text-fields"
                placeholderText="Add a title"
                title=""
                value={item.title}
                onChangeText={(text) => handleTitleChange(item.id, text)}
                hasNoInputError={hasClickedNext && !item.title}
                hasDuplicateTitle={
                  hasClickedNext &&
...
              paddingTop: 15,
              paddingBottom: Platform.OS === "android" ? 8 : 24,
            }}
          >
            <BottomButtons
              titleLeftButton="Back"
              titleRightButton="Next"
              onDiscard={onBack!}
              onNext={() => {
                setHasClickedNext(true);

                const allTitlesFilled = cards.every(
                  (card) => card.title && card.title.trim() !== "",
...
