...
              : itemType === "link"
                ? "link"
                : textfieldIcon
        }
        placeholderText={
          isTitleCard
            ? `E.g. "Title" or "Name"`
            : `Add a label for your ${itemType} field`
        }
        title={""}
        value={title || ""}
        onChangeText={(text) => onTitleChange?.(text)}
        hasNoInputError={hasNoInputError}
...
