...
                        onPress={() => {
                          onClose();
                          router.push("/createCollection");
                        }}
                        colorScheme={colorScheme}
                        accessibilityRole="button"
                        accessibilityLabel="Create a collection"
                        accessibilityHint="Opens the screen to create a new collection"
                      >
                        <OptionIcon>
                          <MaterialIcons
                            name="collections-bookmark"
                            size={24}
...
